// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 1`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Editor"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={true}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 2`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Editor"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={true}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 3`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Co-owner"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 4`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Co-owner"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 5`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Previewer"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 6`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Previewer"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 7`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Previewer Uploader"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 8`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Previewer Uploader"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 9`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Viewer"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 10`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Viewer"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 11`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Viewer Uploader"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 12`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Viewer Uploader"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 13`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <PlainButton
      className="lnk"
      disabled={false}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Uploader"
        />
      </MenuToggle>
    </PlainButton>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() it should render correct menu 14`] = `
<div
  className="invitee-menu-wrap"
>
  <DropdownMenu
    constrainToScrollParent={false}
    constrainToWindow={false}
    isRightAligned={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="bottom-center"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to invite collaborators."
          id="boxui.unifiedShare.inviteDisabledTooltip"
        />
      }
      theme="default"
    >
      <div
        className="tooltip-target"
      >
        <PlainButton
          className="lnk is-disabled bdl-is-disabled"
          disabled={true}
        >
          <MenuToggle>
            <InviteePermissionsLabel
              hasDescription={false}
              inviteePermissionLevel="Uploader"
            />
          </MenuToggle>
        </PlainButton>
      </div>
    </Tooltip>
    <Menu
      className="usm-share-access-menu"
      isHidden={false}
      isSubmenu={false}
    >
      <SelectMenuItem
        isSelected={false}
        key="Editor"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Editor"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Co-owner"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Co-owner"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Viewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Viewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={false}
        key="Previewer"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Previewer"
          inviteePermissions={true}
        />
      </SelectMenuItem>
      <SelectMenuItem
        isSelected={true}
        key="Uploader"
        onClick={[Function]}
      >
        <InviteePermissionsLabel
          hasDescription={true}
          inviteePermissionLevel="Uploader"
          inviteePermissions={true}
        />
      </SelectMenuItem>
    </Menu>
  </DropdownMenu>
</div>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() should render the correct disabled tooltip 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="Collaborators cannot be added to bookmarks."
      id="boxui.unifiedShare.inviteDisabledWeblinkTooltip"
    />
  }
  theme="default"
>
  <div
    className="tooltip-target"
  >
    <PlainButton
      className="lnk is-disabled bdl-is-disabled"
      disabled={true}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Editor"
          itemType="web_link"
        />
      </MenuToggle>
    </PlainButton>
  </div>
</Tooltip>
`;

exports[`features/unified-share-modal/InviteePermissionsMenu render() should render the correct disabled tooltip 2`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="bottom-center"
  text={
    <FormattedMessage
      defaultMessage="You do not have permission to invite collaborators."
      id="boxui.unifiedShare.inviteDisabledTooltip"
    />
  }
  theme="default"
>
  <div
    className="tooltip-target"
  >
    <PlainButton
      className="lnk is-disabled bdl-is-disabled"
      disabled={true}
    >
      <MenuToggle>
        <InviteePermissionsLabel
          hasDescription={false}
          inviteePermissionLevel="Editor"
          itemType="folder"
        />
      </MenuToggle>
    </PlainButton>
  </div>
</Tooltip>
`;
